# trading-automation-fullstack

./: .env.template  .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  refresh_static_data.sh  requirements-lock.txt  requirements.txt  run_module.sh
aws/lambda/: Dockerfile  alerts_handler.py  dashboard_handler.py  market_analysis_handler.py  ml_trainer_handler.py  position_sizer_handler.py  requirements_ml.txt  stock_screener_handler.py  trade_journal_handler.py
aws/scripts/: build_docker.sh  build_lambda_package.sh  deploy_functions.sh  fix_layer.sh  setup_eventbridge.sh
data/: tickers.json
data/temp_output/: manual_market_analysis_final.json  response.json
docs/00-START-HERE/: README.md
docs/01-Planning/: project_status_jan_2026.md
docs/02-Implementation/: AWS_LAMBDA_DEPLOYMENT_GUIDE.md
docs/04-Architecture/: architecture_diagrams.md
docs/05-Reference/: COMPLETE-OPTIMIZED-TRADING-SYSTEM-2026.md
docs/99-Archive/: CONSOLIDATED_TRADING_SYSTEM_OLD.md  LAMBDA_DEPLOYMENT_GUIDE_OLD.md
scripts/backtest/: run_strategy.py  run_targeted.py
scripts/data/: create_baseline.py  initialize_data_lake.py  verify_data_lake.py
scripts/experiments/: test_highstrike_strategy.py  test_tqqq_strategy.py
scripts/ml/: analyze_features.py  generate_training_data.py  selected_features.txt  train_ensemble.py  train_model.py
scripts/ops/: request_trigger.py
scripts/reports/: generate_ml_screen_report.py
scripts/utils/: cache_sectors.py  cache_vix.py  generate_manifest.py  refresh_static_data.sh  test_sector_fetch.py  (+1 more)
tests/: conftest.py
(+64 files in other folders)
